fixed hero being way too big on 4k screens

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,6 +1,6 @@
 .hero {
     width: 100%;
-    max-width: 100vw;
+    max-width: min(100vw, 1920px);
     overflow: hidden;
 }
 
@@ -11,6 +11,7 @@
     z-index: -1;
     position: absolute;
     width: 100%;
+    max-width: min(100vw, 1920px);
     filter: blur(50px);
     transform: scale(1, 1.1);
 }
